--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,7 +7,7 @@
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
   </div>
   <div>
-    <button (onclick)=save(hero)>Save</button>
+    <button (click)="save(hero)">Save</button>
   </div>
 </div>
 
